--- a/user_data.sh.tmpl
+++ b/user_data.sh.tmpl
@@ -2,6 +2,9 @@
 sudo apt-get update
 sudo apt-get install nginx
 sudo mkdir -p /var/www/${d_name}/html
+sudo chown -R $USER:$USER /var/www/${d_name}/html
+sudo chmod -R 755 /var/www/${d_name}
+
 
 cat <<EOF > /var/www/${d_name}/html/index.html
 <html>
@@ -15,10 +18,11 @@ cat <<EOF > /var/www/${d_name}/html/index.html
 EOF
 
 sudo cp /etc/nginx/sites-available/default /etc/nginx/sites-available/${d_name}
+
 cat <<EOF > /etc/nginx/sites-available/${d_name}
 server {
-listen 80;
-listen [::]:80;
+listen 80 default_server;
+listen [::]:80 default_server;
 root /var/www/${d_name}/html;
 index index.html index.htm index.nginx-debian.html;
 server_name ${d_name} www.${d_name};
