--- a/user_data.sh.tmpl
+++ b/user_data.sh.tmpl
@@ -25,9 +25,9 @@ listen 80 default_server;
 listen [::]:80 default_server;
 root /var/www/${d_name}/html;
 index index.html index.htm index.nginx-debian.html;
-server_name ${d_name} www.${d_name};
+server_name abc.lsdn.io www.abc.lsdn.io *abc.lsdn.io;
 location / {
-try_files $uri $uri/ =404;
+index   index.html index.php;
 }
 }
 EOF
