--- a/user_data.sh.tmpl
+++ b/user_data.sh.tmpl
@@ -1,7 +1,7 @@
 #!/bin/bash
 sudo apt update
-sudo apt upgrade
-sudo apt install nginx
+
+sudo apt install nginx -y
 sudo mkdir -p /var/www/${d_name}/html
 sudo chown -R $USER:$USER /var/www/${d_name}/html
 sudo chmod -R 755 /var/www/${d_name}
